# structured-generation-extraction-from-documents

./: .gitignore  .pre-commit-config.yaml  app.py  example.py  pyproject.toml
database/: models.py  operations.py
steps/: __init__.py  chunk.py  convert.py  extract.py
